--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body {
     font-family: Valorant;
     color: black;
     width: 100%;
-    height: 100%;
-    background-color: rgb(209 209 209 / 27%);
+    height: 98%;
+    background: url(valorant-buy-phase.png);
+    background-size: contain;
+    background-attachment: fixed;
 }
 
 
@@ -32,27 +34,28 @@ body {
     width: 80%;
     margin: 1rem;
     padding: 1rem;
-    border: 1px solid blue;
+    
 }
 
-.box{
+.box {
     display: flex;
     justify-items: center;
     align-items: flex-end;
     border: 1px solid;
-
+    background-color: rgb(209 209 209 / 27%);
 }
 
 .smgs {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "stinger"
         "spectre";
     grid-area: smgs;
-    
+
 }
 
 #stinger {
@@ -66,16 +69,17 @@ body {
 .rifles {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr;
     gap: 1px 1px;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "bulldog"
         "guardian"
         "phanton"
         "vandal";
     grid-area: rifles;
-    
+
 }
 
 #bulldog {
@@ -97,14 +101,15 @@ body {
 .sniper {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr;
     gap: 1px 1px;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "marshal"
         "operator";
     grid-area: sniper;
-    
+
 }
 
 #marshal {
@@ -118,13 +123,14 @@ body {
 .armor {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.1fr 1fr 1fr;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "light-shield"
         "heavy-shield";
     grid-area: armor;
-    
+
 }
 
 #light-shield {
@@ -138,14 +144,15 @@ body {
 .shotguns {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "bucky"
         "judge";
     grid-area: shotguns;
-    
+
 }
 
 #bucky {
@@ -159,14 +166,15 @@ body {
 .machineguns {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "ares"
         "odin";
     grid-area: machineguns;
-   
+
 }
 
 #ares {
@@ -180,17 +188,26 @@ body {
 .sidearms {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+        "title"
         "classic"
         "shorty"
         "frenzy"
         "ghost"
         "sherif";
     grid-area: sidearms;
-    
+
+}
+
+#title {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    grid-area: title;
+    background-color: #3EC894;
 }
 
 #classic {
