--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 
 html,
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Valorant;
     color: black;
     width: 100%;
@@ -20,32 +23,48 @@ body {
     background-attachment: fixed;
 }
 
+.img-gun{
+    transform: scaleX(-1);
+    margin-top:20px;
+    height: auto;
+    width: 140px;
+    max-width: 100%;
+  }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 2px 2px;
     grid-auto-flow: row;
     grid-template-areas:
-        "sidearms smgs rifles sniper armor"
-        "sidearms shotguns rifles machineguns armor";
-    height: 80%;
+        "sidearms smgs rifles sniper armor modal"
+        "sidearms shotguns rifles machineguns armor modal";
+    height: 90%;
     width: 80%;
     margin: 1rem;
+    margin-left: 5rem;
     padding: 1rem;
-    
+}
+
+.modal {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
 }
 
 .box {
     display: flex;
-    justify-items: center;
-    align-items: flex-end;
-    border: 1px solid;
     background-color: rgb(209 209 209 / 27%);
+    justify-content: end;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 98%;
+    height: 98%;
+    
 }
 
-.smgs {
+.SMG {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr;
@@ -66,7 +85,7 @@ body {
     grid-area: spectre;
 }
 
-.rifles {
+.Rifle {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr;
@@ -98,7 +117,7 @@ body {
     grid-area: vandal;
 }
 
-.sniper {
+.Sniper {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr;
@@ -141,7 +160,7 @@ body {
     grid-area: heavy-shield;
 }
 
-.shotguns {
+.Shotgun {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr;
@@ -163,7 +182,7 @@ body {
     grid-area: judge;
 }
 
-.machineguns {
+.Heavy {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr;
@@ -185,7 +204,7 @@ body {
     grid-area: odin;
 }
 
-.sidearms {
+.Sidearm {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 1fr 1fr 1fr 1fr 1fr;
@@ -199,7 +218,6 @@ body {
         "ghost"
         "sherif";
     grid-area: sidearms;
-
 }
 
 #title {
@@ -207,11 +225,12 @@ body {
     justify-content: center;
     text-align: center;
     grid-area: title;
-    background-color: #3EC894;
+    background-color: rgb(62, 200, 148, 70%);
 }
 
 #classic {
     grid-area: classic;
+
 }
 
 #shorty {
