--- a/style.css
+++ b/style.css
@@ -23,14 +23,6 @@ body {
     background-attachment: fixed;
 }
 
-.img-gun{
-    transform: scaleX(-1);
-    margin-top:20px;
-    height: auto;
-    width: 140px;
-    max-width: 100%;
-  }
-
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -47,12 +39,6 @@ body {
     padding: 1rem;
 }
 
-.modal {
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
-}
-
 .box {
     display: flex;
     background-color: rgb(209 209 209 / 27%);
@@ -61,7 +47,17 @@ body {
     flex-direction: column;
     width: 98%;
     height: 98%;
-    
+
+}
+
+.img-guns{
+    display: flex;
+    justify-content: end;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 90%;
+    height: 90%;
+    margin: 0.5rem;
 }
 
 .SMG {
