--- a/style.css
+++ b/style.css
@@ -49,7 +49,11 @@ body {
     width: 98%;
     height: auto;
     position: relative;
+    transition: 200ms ease;
+}
 
+.box:hover{
+    background-color: rgb(62, 200, 148, 70%);
 }
 
 .textBox {
