--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: Valorant;
-    color: black;
+    color: white;
     width: 100%;
     height: 98%;
     background: url(valorant-buy-phase.png);
@@ -39,9 +39,114 @@ body {
     padding: 1rem;
 }
 
-.box {
+.modal {
+    grid-area: modal;
     display: flex;
     background-color: rgb(209 209 209 / 60%);
+    align-items: center;
+    flex-direction: column;
+    margin: 0.1rem;
+    width: 100%;
+    height: auto;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.modalTitle {
+    background-color: rgb(62, 200, 148, 70%);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 5%;
+    padding: 5px;
+}
+
+.modalCard {
+    width: 95%;
+    height: 300px;
+    margin: 1px 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.columCard {
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 80px;
+    height: 80px;
+    margin: 5px;
+    background-color: rgb(209, 209, 209, 50%);
+}
+
+.cardTitle {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(209, 209, 209, 100%);
+    font-size: 12px;
+    padding: 2px;
+}
+
+.cardTitleSpecial {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(209, 209, 209, 100%);
+    font-size: 8px;
+    padding: 2px;
+}
+
+.cardInfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    font-size: 20px;
+}
+
+.cardInfoSpecial {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    font-size: 12px;
+}
+
+.unit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    font-size: 10px;
+}
+
+.small-text {
+    font-size: 9px;
+}
+
+.fireDesc {
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    height: 20%px;
+    font-size: 9px;
+}
+
+.box {
+    display: flex;
+    background-color: rgb(209 209 209 / 50%);
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
@@ -52,16 +157,9 @@ body {
     transition: 200ms ease;
 }
 
-.box:hover{
+.box:hover {
     background-color: rgb(62, 200, 148, 70%);
-}
-
-.textBox {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-left: 1.5rem;
-    width: 100%;
+    color: #444;
 }
 
 .img-guns {
@@ -71,17 +169,24 @@ body {
     margin-top: 3px;
     height: 40px;
     width: 100%;
-
 }
 
-.heavyArmor{
+.heavyArmor {
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: auto;
+    margin: 10px;
 }
 
+.textBox {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 1.5rem;
+    width: 100%;
+}
 
 .SMG {
     display: grid;
