--- a/style.css
+++ b/style.css
@@ -46,10 +46,10 @@ body {
     align-items: center;
     flex-direction: column;
     margin: 0.1rem;
-    width: 100%;
+    width: 120%;
     height: auto;
     position: relative;
-    flex-wrap: wrap;
+
 }
 
 .modalTitle {
@@ -64,7 +64,7 @@ body {
 
 .modalCard {
     width: 95%;
-    height: 300px;
+    height: 270px;
     margin: 1px 1px;
     display: flex;
     justify-content: center;
@@ -127,6 +127,46 @@ body {
     align-items: center;
     margin: auto;
     font-size: 10px;
+}
+
+.damage {
+    width: 100%;
+    height: 145px;
+}
+
+.damageTitle {
+    width: 100%;
+    height: 25px;
+    background-color: rgb(209, 209, 209, 100%);
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 5px;
+}
+
+.numeros-disparo {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 40px;
+    border-bottom: 1px solid white;
+    font-size: 8px;
+    height: 100%;
+}
+
+.damageInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    border: 1px;
+    padding: 5px;
+    margin: 1px 0px;
+    color: rgb(62, 200, 148);;
+    background-color: rgb(209, 209, 209, 100%);
+
 }
 
 .small-text {
@@ -273,7 +313,8 @@ body {
         "light-shield"
         "heavy-shield";
     grid-area: armor;
-
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 #light-shield {
