--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
     margin: 0.1rem;
     width: 120%;
-    height: auto;
+    height: 100%;
     position: relative;
 
 }
@@ -130,8 +130,9 @@ body {
 }
 
 .damage {
-    width: 100%;
-    height: 145px;
+    width: 98%;
+    height: 140px;
+    
 }
 
 .damageTitle {
@@ -151,7 +152,7 @@ body {
     justify-content: center;
     width: 40px;
     border-bottom: 1px solid white;
-    font-size: 8px;
+    font-size: 9.4px;
     height: 100%;
 }
 
@@ -160,13 +161,18 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 40px;
+    height: 39px;
     border: 1px;
     padding: 5px;
     margin: 1px 0px;
     color: rgb(62, 200, 148);;
     background-color: rgb(209, 209, 209, 100%);
 
+}
+
+.num{
+    color: white;
+    margin: 2px 5px;
 }
 
 .small-text {
@@ -186,7 +192,7 @@ body {
 
 .box {
     display: flex;
-    background-color: rgb(209 209 209 / 50%);
+    background-color: rgba(170, 163, 163, 0.6);
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
